# mass-spec-viewer

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python_ci.yml  python_ci_linux.yml
mass_spec_viewer/: __init__.py  __main__.py  _batch_process.py  confidence.py  data.py  index.py  plot.py  types.py
mass_spec_viewer/css/: __init__.py
