[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "mass-spec-viewer"
version = "0.0.0"
description = "Combined spectrum viewer and comparison tool."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/GunShotMatch/mass-spec-viewer"
"Issue Tracker" = "https://github.com/GunShotMatch/mass-spec-viewer/issues"
"Source Code" = "https://github.com/GunShotMatch/mass-spec-viewer"

[project.scripts]
mass-spec-viewer = "mass_spec_viewer.__main__:main"

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = [ "Windows", "macOS", "Linux",]

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "mass_spec_viewer"
additional-files = [ "recursive-include mass_spec_viewer/css *.css", "include mass_spec_viewer/css/LICENSE",]

[tool.importcheck]

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
